@@ -1,0 +1,3 @@
+[weblate]
+url = https://weblate.framasoft.org/api/
+translation = lstu
