@@ -6,7 +6,8 @@ Revision history for Perl application Lstu
 	- Slugify custom URLs and add a suffix (-2, -3…) if the custom URL is
 	  already taken
 	- Allow to search several IP addresses at once
-	- New logo!
+	- New logo and update theme!
+	- Now use https://weblate.framasoft.org/projects/lstu for translations
 
 0.21-4 2018-12-17
 	- Add a lockfile to GSB database update to prevent concurrent updates
